<resources>
    <string name="app_name">RestAreaApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="homeSearchBtn">장소 검색</string>
    <string name="homeExploreBtn">탐색 하기</string>

    <string name="start">출발지 입력</string>
    <string name="goal">도착지 입력</string>
    <string name="searchBackBtn">뒤로가기</string>
    <string name="searchText">길찾기</string>
    <string name="searchBtn">길찾기/휴게소 탐색</string>

    <string name="foodName">음식 이름</string>
    <string name="foodCost">0 원</string>
    <string name="foodEtc">그 외</string>

    <string name="restAreaName">휴게소 이름</string>
    <string name="restAreaConvenience">휴게소 편의시설</string>
    <string name="restAreaBrand">휴게소 유료시설</string>
    <string name="restAreaBtn">펼치기</string>

    <string name="goalSearchText">도착지 입력</string>
    <string name="startSearchText">출발지 입력</string>

    <string name="exploreText">탐색하기</string>

</resources>