<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/foodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foodName"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/foodCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foodCost"
        android:textColor="#232323"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/foodEtc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foodEtc" />
</LinearLayout>