<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/areaName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/restAreaName"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/areaBrand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/restAreaBrand"
                    android:textColor="#393939"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/areaConvenience"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/restAreaConvenience"
                android:textColor="#393939" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/areaBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/restAreaBtn"
            app:srcCompat="@drawable/arrow_down" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/foodsRv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#B66464"
        android:visibility="gone" />
</LinearLayout>